--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
+    "typed.js": "^2.0.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
